comment curd
